# StoryHub

./: .gitignore  CHANGELOG.md  README.md  Tài liệu ban đầu.txt  check_db.py  debug_history.py  diagnose_api.py  diagnose_images.py  fix_db_emergency.py  run_backend.bat  skills-lock.json  storyhub_system_guide.md.resolved  sync_migrations.py  sync_stock.py  syntax_check.py  system fuction.md
backend/: README.md  alembic.ini  check_book_price.py  check_covers.py  check_customer.py  check_volume.py  pyproject.toml  test_mapping.py
backend/app/: main.py
backend/app/api/: websocket.py
backend/app/core/: config.py  errors.py  security.py
backend/app/db/: migration.py  models.py  runtime_schema.py  seed.py  session.py
backend/app/services/: __init__.py  audit.py  cover_storage.py  event_publisher.py  idempotency.py  inventory_log.py  pricing.py  realtime_metrics.py  websocket_manager.py
backend/migrations/: env.py
backend/migrations/versions/: 312d3c25f70d_add_full_14_schema_tables.py  98a514493ad6_init_14_core_tables_on_main.py  a1b2c3d4e5f6_add_promotion_and_spending.py
backend/scripts/: migrate.py  seed.py
backend/tests/: auth_helpers.py  conftest.py  test_db_migration_seed.py  test_event_emission.py  test_event_publisher.py  test_health.py  test_phase3_hardening.py  test_phase3_inventory_crm.py  test_phase3_pos.py  test_phase3_rental.py  test_phase5_realtime.py  test_phase6_report_metadata_backup.py  test_phase7_admin_quan_ly_backend.py  test_realtime_metrics_endpoint.py  test_websocket_endpoint.py  test_websocket_manager.py
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
(+185 files in other folders)
