[package]
name = "storyhub-manager"
version = "0.1.0"
description = "StoryHub Management Desktop App"
authors = ["StoryHub Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link-time-optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
